--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
     <li><a href="tel:+9566656464"><img src="Phone.jpg" height="45" width="45"></a></li>
     <li><a href="tinuraj2003@gmail.com"><img src="Mail.jpg" height="40" width="60"></a></li>
-    <li><a href="https://www.linkedin.com/in/tinu-p-062ab6211/"><img src="linkedin.jpg" height="55" width="55"></a></li>
+    <li><a href="https://www.linkedin.com/in/tinu-pandian/"><img src="linkedin.jpg" height="55" width="55"></a></li>
     <li><a href="https://twitter.com/TINY_HUNTER_20"><img src="twitter.jpg" height="45" width="45"></a></li>
     <li><a href="https://github.com/Tinupandian?query=is%3Aopen&tab=projects/"><img src="Github.jpg" height="50" width="50"></a></li>
 </ul>
