--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Resume</title>
+        <title>(1.1.1)</title>
         <link rel="stylesheet" href="Design.css">
     </head>
     <body>
