--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCtype html>
 <html>
     <head>
-        <title>Resume</title>
-        <title>(1.1.1)</title>
+        <title>Resume (1.1.1) </title>
+       
         <link rel="stylesheet" href="Design.css">
     </head>
     <body>
